--- a/rynk.html
+++ b/rynk.html
@@ -7,13 +7,14 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="rynk.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
-<div class="sidebar">
-  <h3 class="text-center py-4">📚 Bibliotheca</h3>
+<div class="sidebar" id="sidebar">
+  <h3 class="text-center py-4"><i class="fa fa-book-open text-primary me-2"></i> Bibliotheca</h3>
   <a onclick="showSection('dashboard')"><i class="fa fa-chart-pie me-2"></i>Dashboard</a>
   <a onclick="showSection('livres')"><i class="fa fa-book me-2"></i>Livres</a>
   <a onclick="showSection('auteurs')"><i class="fa fa-user-pen me-2"></i>Auteurs</a>
@@ -21,13 +22,30 @@
 
 <div class="content">
 
-  <div class="topbar mb-4 d-flex justify-content-between">
-    <strong>Smart Library Backoffice</strong>
-    <span><i class="fa fa-user-circle"></i> Admin</span>
+  <div class="topbar mb-4 d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center gap-2">
+      <button id="menuToggle" class="btn btn-light d-md-none"><i class="fa fa-bars"></i></button>
+      <strong class="ms-1">Smart Library Backoffice</strong>
+    </div>
+
+    <div class="d-flex align-items-center gap-3 w-50 justify-content-center">
+      <form class="w-75">
+        <input class="form-control search-input" placeholder="Rechercher un livre ou auteur..." />
+      </form>
+    </div>
+
+    <div class="d-flex align-items-center gap-2">
+      <button id="themeToggle" class="btn btn-outline-secondary btn-sm"><i class="fa fa-moon"></i></button>
+      <button class="btn btn-outline-secondary btn-sm">Notifications <span class="badge bg-danger ms-2">3</span></button>
+      <div class="avatar text-center">
+        <div class="avatar-circle">A</div>
+        <div class="d-none d-md-block ms-2">Admin</div>
+      </div>
+    </div>
   </div>
 
   <section id="dashboard" class="active">
-    <h4 class="mb-4">📊 Dashboard</h4>
+    <h4 class="mb-4"><i class="fa fa-chart-line text-primary me-2"></i> Dashboard</h4>
     <div class="row">
       <div class="col-md-4">
         <div class="card kpi p-4">
@@ -47,7 +65,7 @@
               <h6>Total Auteurs</h6>
               <h2 id="kpiAuteurs">0</h2>
             </div>
-            <i class="fa fa-user text-success"></i>
+            <i class="fa fa-user text-primary"></i>
           </div>
         </div>
       </div>
@@ -55,15 +73,15 @@
 
     <div class="row mt-4">
       <div class="col-md-6">
-        <div class="card p-4">
-          <h6>Livres par Auteur</h6>
+        <div class="card p-4 card-chart-green">
+          <h6 class="text-primary"><i class="fa fa-chart-bar text-primary me-2"></i> Livres par Auteur</h6>
           <canvas id="chartLivres"></canvas>
         </div>
       </div>
       <div class="col-md-6">
         <div class="card p-4">
-          <h6>📥 Import OpenLibrary</h6>
-          <button class="btn btn-secondary" onclick="importerLivreOpenLibrary()">Importer un livre réel</button>
+          <h6 class="text-primary"><i class="fa fa-download text-primary me-2"></i> Import OpenLibrary</h6>
+          <button class="btn btn-primary" onclick="importerLivreOpenLibrary()">Importer un livre réel</button>
           <p class="text-muted mt-2">Données réelles depuis OpenLibrary API</p>
         </div>
       </div>
@@ -71,25 +89,25 @@
   </section>
 
   <section id="livres">
-    <h4>📘 Gestion des Livres</h4>
+    <h4><i class="fa fa-book text-primary me-2"></i> Gestion des Livres</h4>
     <form id="livreForm" class="row g-3 my-3">
       <input type="hidden" id="livreIndex">
       <div class="col-md-3"><input id="titre" class="form-control" placeholder="Titre" required></div>
       <div class="col-md-3"><input id="auteur" class="form-control" placeholder="Auteur" required></div>
       <div class="col-md-2"><input id="annee" type="number" class="form-control" placeholder="Année" required></div>
-      <div class="col-md-3"><input id="image" class="form-control" placeholder="URL de l'image" required></div>
-      <div class="col-md-1"><button class="btn btn-primary w-100">Enregistrer</button></div>
+      <div class="col-md-2"><input id="image" class="form-control" placeholder="URL de l'image" required></div>
+      <div class="col-md-2"><button class="btn btn-primary btn-lg w-100 fw-bold"><i class="fa fa-save me-2"></i>Enregistrer</button></div>
     </form>
 
     <div id="livresGrid" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"></div>
   </section>
 
   <section id="auteurs">
-    <h4>✍️ Auteurs</h4>
+    <h4><i class="fa fa-users text-primary me-2"></i> Auteurs</h4>
     <form id="auteurForm" class="row g-3 my-3">
       <div class="col-md-5"><input id="nomAuteur" class="form-control" placeholder="Nom" required></div>
       <div class="col-md-5"><input id="nationalite" class="form-control" placeholder="Nationalité" required></div>
-      <div class="col-md-2"><button class="btn btn-success w-100">Ajouter</button></div>
+      <div class="col-md-2"><button class="btn btn-primary w-100"><i class="fa fa-plus me-2"></i>Ajouter</button></div>
     </form>
     <ul id="auteursList" class="list-group"></ul>
   </section>
@@ -99,4 +117,5 @@
 <script src="rynk.js"></script>
 </body>
 </html>
+
 
